--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   deploy:
-    if: ${{ github.event.pull_request.merged == true }}
+    if: ${{ github.event.pull_request.merged == true || inputs.manual_deploy == true }}
     uses: trfore/docker-image/.github/workflows/deploy_docker_hub.yml@main # remote repo
     with:
       PLATFORMS: "linux/amd64"
