--- a/.github/workflows/update_base.yml
+++ b/.github/workflows/update_base.yml
@@ -7,5 +7,5 @@ on:
 jobs:
   update:
     uses: trfore/docker-image/.github/workflows/update_base_digest.yml@main # remote repo
-    secrets:
+    with:
       TOKEN: ${{ secrets.AUTO_PR_TOKEN }}
